# BreastCancerDetection_CDD-CESM

./: .gitignore  readme.md
Feature_Extraction/: CMakeLists.txt  PCA component comparison.ipynb  With PCA.ipynb  Without PCA.ipynb  dataNormalizer.py  databalancer.py  glcmMain.cpp  glcmMain.h  main.cpp
Grammatical_Evolution/best_individuals/: cc_cm  cc_dm  mlo_cm  mlo_dm
Grammatical_Evolution/grammar/: grammar_gov.bnf
Grammatical_Evolution/src/: GEcancer.c  GEcancer.h  main.cpp
Grammatical_Evolution/template/: cancerEnd.c  cancerStart.c  individual_for_validation.cpp  trainEnd.c  trainStart.c  validateEnd.c
Grammatical_Evolution/tmp/: evaluate_cc_cm.cpp  evaluate_cc_dm.cpp  evaluate_mlo_cm.cpp  evaluate_mlo_dm.cpp
Results/: GE_Graphs_1.ipynb  GE_Graphs_2.ipynb  GE_Graphs_3.ipynb  commands.txt
Results/cc_cm/cc_cm_p1000_g100_s10/: best_train_indvidual_1.csv  best_train_indvidual_4.csv  best_val_indvidual_1.csv  best_val_indvidual_2.csv  best_val_indvidual_3.csv  best_val_indvidual_4.csv  best_val_indvidual_5.csv
Results/cc_cm/cc_cm_p1000_g100_s100/: best_train_indvidual_1.csv  best_train_indvidual_5.csv  best_val_indvidual_1.csv  best_val_indvidual_2.csv  best_val_indvidual_3.csv  best_val_indvidual_4.csv  best_val_indvidual_5.csv
Results/cc_cm/cc_cm_p1000_g100_s1000/: best_train_indvidual_1.csv  best_train_indvidual_2.csv  best_val_indvidual_1.csv  best_val_indvidual_2.csv  best_val_indvidual_3.csv  best_val_indvidual_4.csv  best_val_indvidual_5.csv  settings.ini
Results/cc_cm/cc_cm_p1000_g100_s1234/: settings.ini  (+7 more)
dataset/mlo_cm/: preprocess.sh
(+698 files in other folders)
